# minecraft-in-cpp

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  flake.nix
.github/workflows/: build.yml
src/: app.cpp  app.h  camera.cpp  camera.h  chunk.cpp  chunk.h  chunkmanager.cpp  chunkmanager.h  log.h  main.cpp  raycast.h  renderer.h  renderer_gl.cpp  renderer_gl.h  renderer_vulkan.cpp  renderer_vulkan.h  shell.html  textureatlas.cpp  textureatlas.h  threadpool.h  winmain_wrapper.cpp
src/shaders/: frag.frag  ui_frag.frag  ui_vert.vert  vert.vert
vendors/cglm/: cglmConfig.cmake  cmake_install.cmake  libcglm.so.0.9.6
